--- a/ace-web/package.json
+++ b/ace-web/package.json
@@ -11,6 +11,8 @@
     "gatsby-plugin-manifest": "^4.1.2",
     "gatsby-plugin-offline": "^5.1.2",
     "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.10.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-source-filesystem": "^4.1.1",
     "gatsby-transformer-sharp": "^4.1.0",
@@ -18,7 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.43.4"
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
