--- a/ace-web/package.json
+++ b/ace-web/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "^2.4.1"
   },
   "keywords": [
@@ -36,7 +37,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
